| Summary: | ASTERISK-30220: func_scramble: Fix segfault due to null pointer deref | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-09-10 10:13:47 | Date Closed: | 2022-09-22 10:22:32 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Functions/General |
| Versions: | 18.14.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fix segfault due to null pointer reference.
This seems to be some kind of regression because this did not happen on 18.9.0 and there was a gcc fix in the middle, but I'm not positive on that either. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-09-10 10:13:50.804-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-09-22 10:22:34.458-0500 Change 19285 merged by Friendly Automation: func_scramble: Fix null pointer dereference. [https://gerrit.asterisk.org/c/asterisk/+/19285|https://gerrit.asterisk.org/c/asterisk/+/19285] By: Friendly Automation (friendly-automation) 2022-09-22 10:23:30.542-0500 Change 19203 merged by Friendly Automation: func_scramble: Fix null pointer dereference. [https://gerrit.asterisk.org/c/asterisk/+/19203|https://gerrit.asterisk.org/c/asterisk/+/19203] By: Friendly Automation (friendly-automation) 2022-09-22 11:26:04.291-0500 Change 19287 merged by Friendly Automation: func_scramble: Fix null pointer dereference. [https://gerrit.asterisk.org/c/asterisk/+/19287|https://gerrit.asterisk.org/c/asterisk/+/19287] By: Friendly Automation (friendly-automation) 2022-09-22 11:26:10.107-0500 Change 19286 merged by Friendly Automation: func_scramble: Fix null pointer dereference. [https://gerrit.asterisk.org/c/asterisk/+/19286|https://gerrit.asterisk.org/c/asterisk/+/19286] By: Friendly Automation (friendly-automation) 2022-09-22 11:26:13.213-0500 Change 19288 merged by Friendly Automation: func_scramble: Fix null pointer dereference. [https://gerrit.asterisk.org/c/asterisk/+/19288|https://gerrit.asterisk.org/c/asterisk/+/19288] | ||